— fix extra space after code cells

--- a/ide/h1st/src/browser/style/index.css
+++ b/ide/h1st/src/browser/style/index.css
@@ -355,6 +355,7 @@ li.p-Menu-item[data-command="__plugin.menu.action.python.datascience.runFileInte
   white-space: -pre-wrap;
   white-space: -o-pre-wrap;
   word-wrap: break-word;
+  margin: 0px;
 }
 
 .cell-output-plot-background {
